--- a/style.css
+++ b/style.css
@@ -90,4 +90,74 @@
     background-color: var(--red);
 }
 
+/* style main */
+main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+main .text {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    max-width: 50%;
+    padding: 0 7vw;
+}
+
+main .text h2 {
+    color: var(--red);
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+main .text h1 {
+    color: var(--black);
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 4rem;
+    margin-bottom: 1rem;
+}
+
+main .text p {
+    font-size: 0.9rem;
+    margin-bottom: 3rem;
+}
+
+main .text button {
+    width: 8rem;
+    height: 2.3rem;
+    border-radius: 10px;
+    border: none;
+    color: #fff;
+    background-color: var(--red);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+main .text button:hover {
+    background-color: var(--black);
+}
+
+main .image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .image img {
+    margin: 10vh 1vw;
+    max-width: 75%;
+    transition: all 0.5s;
+}
+main .image img:hover {
+    scale: 1.1;
+    rotate: 15deg;
+}
+
 /* SDG */
